--- a/eevee.css
+++ b/eevee.css
@@ -34,4 +34,4 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .h4p {display: block;margin-top: 1em;margin-bottom: 1em;margin-left: 0;margin-right: 0;font-size: 1em;  font-weight: normal;}
 .h5p {display: block;margin-top: 1em;margin-bottom: 1em;margin-left: 0;margin-right: 0;font-size: 1em;  font-weight: normal;}
 .h6p {display: block;margin-top: 1em;margin-bottom: 1em;margin-left: 0;margin-right: 0;font-size: 1em;  font-weight: normal;}
-p {display: block;margin-top: 1em;margin-bottom: 1em;margin-left: 0;margin-right: 0;font-size: 18px;}
+p {display: block;margin-top: 1em;margin-bottom: 1em;margin-left: 0;margin-right: 0;font-size: 1em}
